<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.ryohandoko.restaurantuas.view.fragment.PesananFragment" />

        <variable
            name="VM"
            type="com.ryohandoko.restaurantuas.viewmodel.PesananFragmentViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/layoutPesanan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.admin.ShowProductActivity">

        <LinearLayout
            android:id="@+id/upper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageButton
                    android:id="@+id/ibBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:onClick="@{view::back}"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    android:foreground="?android:attr/selectableItemBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="List Pesanan"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/upper"
                android:padding="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/upper"></androidx.recyclerview.widget.RecyclerView>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{VM.isLoaded}"
            android:onClick="@{view::cetak}"
            android:text="Cetak Pesanan"
            android:backgroundTint="#45b6fe"/>

    </RelativeLayout>
</layout>