...
                    android:textSize="32sp"
                    tools:text="10" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/xyz"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="#ba1032"
                    android:onClick="@{view::Hapus}"
                    android:text="DELETE" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00aabb"
                    android:onClick="@{view::Update}"
...
