<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Fragment_Home"
        android:icon="@drawable/ic_home"
        android:title="@string/titleFragmentHome" />

    <item
        android:id="@+id/Fragment_Geolocation"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/titleFragmentMap"/>

    <item
        android:id="@+id/Fragment_Pesanan"
        android:icon="@drawable/ic_receipt"
        android:title="@string/titleFragmentPesanan"/>

    <item
        android:id="@+id/Fragment_Profile"
        android:icon="@drawable/ic_person"
        android:title="@string/titleFragmentProfile" />
</menu>